tests/snapshots/integration__integration_tests__list__maximum_status_symbols.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--full"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpLJgbF4/test-config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[1mBranch[0m   [1mStatus[0m              [1mHEAD±[0m    [1mmain↕[0m     [1mmain…±[0m  [1mPath[0m         [1mRemote⇅[0m  [1mCI[0m  [1mCommit[0m    [1mAge[0m              [1mMessage[0m
[1m[35mmain[0m                                                    [1m[35m./test-repo[0m               [2m85ed6d3d[0m  [2m10 months ago[0m    [2mMain advances[0m
feature  [36m?!+»✘[0m[31m=[0m ↕[UPSTREAM][33m⊠[0m🤖      [32m+2[0m   [31m-2[0m   [32m↑2[0m  [2m[31m↓[N][0m    [32m+3[0m   [31m-1[0m  ./feature     [32m↑1[0m  [2m[31m↓[N][0m      [2m4afb2b9e[0m  [2m10 months ago[0m    [2mLocal commit[0m

⚪ [2mShowing 2 worktrees, 1 with changes, 1 ahead[0m
